# ResearchTracker

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
src/backend/: auth.py  database.py  dependencies.py  intertnal.py  routes.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: auth.html  index.html
src/frontend/src/: index.js  main.js
src/frontend/src/pages/: index.html  index.js
src/frontend_next/: Dockerfile  docker-compose.yml  package-lock.json  package.json
src/frontend_next/nextjs-blog/: package.json
src/frontend_next/nextjs-blog/components/: useAuth.js
src/frontend_next/nextjs-blog/pages/: auth.js  index.js
src/frontend_next/nextjs-blog/styles/: global.css  main.css
src/frontend_next/pages/: auth.js  index.js
