[tool.poetry]
name = "research-tracker"
version = "1.0.0"
description = "Research Web module"
authors = ["Nikita Davidchuk <bizy18588@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
